A few references into HIV background

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -145,12 +145,13 @@ Examples include men who have sex with men (MSM), female sex workers (FSW), peop
 KPs are often marginalised, and face legal and social barriers.
 Concentrated settings are defined by the majority of new HIV infections occurring in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
-For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing] but not typically considered a KP.
+For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023longitudinal] but not typically considered a KP.
 That said, concentrated subepidemics often occur within nominally generalised settings [@tanser2014concentrated].
 
 <!-- Practical methods for prevention prioritisation: what is being done and is it working -->
-Differentiated HIV treatment and prevention services can be practically implemented via a number of approaches.
-These include geographic and demographic prioritisation, key population services, and risk screening based on individual-level risk characteristics [@eaton2022aids].
+Differentiated HIV treatment and prevention services [@godfrey2022hiv] can be practically implemented via a number of approaches.
+These include geographic and demographic prioritisation [@meyer2018targeting], key population services [@world2022consolidated], and risk screening based on individual-level risk characteristics [@jia2022risk].
+<!-- Delivery of these services requires... -->
 
 ## HIV surveillance {#surveillance}
 
@@ -161,9 +162,9 @@ Important indicators include:
 
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of a population who have HIV.
 The number of PLHIV is given by $N\rho$, where $N$ is the (living) population size.
-Increases in HIV prevalence, or the number of PLHIV, can be caused by either new HIV infections or more PLHIV remaining alive by taking treatment.
-For this reason care must be taken in directly interpreting changes in HIV prevalence.
-As a key measure of population disease burden, HIV prevalence is used to calculate all of the other indicators given below.
+Increases in HIV prevalence, or the number of PLHIV, can be caused either by new HIV infections or more PLHIV remaining alive by taking treatment.
+For this reason caution must be taken in directly interpreting changes in HIV prevalence.
+As a primary measure of population disease burden, HIV prevalence is used to calculate all of the other indicators given below.
 
 * **HIV incidence** is the rate $\lambda > 0$ of new HIV infections, often written as number of new infections per 1000 person years.
 The number of new HIV infections that occur during a given time is the integral of HIV incidence multiplied by the size of the susceptible population.
@@ -175,11 +176,12 @@ $$
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence and the number of new HIV infections.
 
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART.
-Estimates of ART coverage play a direct role in planning the provision of treatment services.
+Estimates of ART coverage play a direct role in planning provision of treatment services, and finding unmet treatment need.
 The number of people taking ART is given by $N \cdot \rho \cdot \alpha$.
 
 * **Recent infection** is the proportion $\kappa \in [0, 1]$ of PLHIV who have been recently infected.
-Recent infection can be used to help estimate HIV incidence.
+Recency assays have been developed to distinguish between recent and longstanding infection based on biomarkers.
+Recent infection is primarily used to help estimate HIV incidence [@kassanjee2012new; @unaids2022using].
 
 * **Awareness of status** is the proportion $\xi \in [0, 1]$ of PLHIV who have been diagnosed with HIV.
 Programming of HIV testing and diagnosis is informed by awareness of status.
