--- a/references.bib
+++ b/references.bib
@@ -2504,3 +2504,55 @@
   publisher    = {Geneva, Switzerland},
   note         = {Accessed: December 2023}
 }
+
+@article{godfrey2022hiv,
+  title={HIV prevention for the next decade: Appropriate, person-centred, prioritised, effective, combination prevention},
+  author={Godfrey-Faussett, Peter and Frescura, Luisa and Abdool Karim, Quarraisha and Clayton, Michaela and Ghys, Peter D and 2025 prevention targets working group)},
+  journal={PLoS Medicine},
+  volume={19},
+  number={9},
+  pages={e1004102},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{monod2023longitudinal,
+	author = {Monod, M{\'e}lodie and Brizzi, Andrea and Galiwango, Ronald M. and Ssekubugu, Robert and Chen, Yu and Xi, Xiaoyue and Kankaka, Edward Nelson and Ssempijja, Victor and Abeler-D{\"o}rner, Lucie and Akullian, Adam and Blenkinsop, Alexandra and Bonsall, David and Chang, Larry W. and Dan, Shozen and Fraser, Christophe and Golubchik, Tanya and Gray, Ronald H. and Hall, Matthew and Jackson, Jade C. and Kigozi, Godfrey and Laeyendecker, Oliver and Mills, Lisa A. and Quinn, Thomas C. and Reynolds, Steven J. and Santelli, John and Sewankambo, Nelson K. and Spencer, Simon E. F. and Ssekasanvu, Joseph and Thomson, Laura and Wawer, Maria J. and Serwadda, David and Godfrey-Faussett, Peter and Kagaayi, Joseph and Grabowski, M. Kate and Ratmann, Oliver and Rakai Health Sciences Program and PANGEA-HIV consortium},
+	journal = {Nature Microbiology},
+	title = {Longitudinal population-level HIV epidemiologic and genomic surveillance highlights growing gender disparity of HIV transmission in Uganda},
+	year = {2023}
+}
+
+@article{meyer2018targeting,
+  title={Targeting the right interventions to the right people and places: the role of geospatial analysis in HIV program planning},
+  author={Meyer-Rath, Gesine and McGillen, Jessica B and Cuadros, Diego F and Hallett, Timothy B and Bhatt, Samir and Wabiri, Njeri and Tanser, Frank and Rehle, Thomas},
+  journal={AIDS (London, England)},
+  volume={32},
+  number={8},
+  pages={957},
+  year={2018},
+  publisher={Wolters Kluwer Health}
+}
+
+@book{world2022consolidated,
+  title={Consolidated guidelines on HIV, viral hepatitis and STI prevention, diagnosis, treatment and care for key populations},
+  author={World Health Organization and others},
+  year={2022},
+  publisher={World Health Organization}
+}
+
+@article{kassanjee2012new,
+	author = {Kassanjee, Reshma and McWalter, Thomas A. and B{\"a}rnighausen, Till and Welte, Alex},
+	journal = {Epidemiology},
+	number = {5},
+	title = {A New General Biomarker-based Incidence Estimator},
+	volume = {23},
+	year = {2012}
+}
+
+@book{unaids2022using,
+  title={Using recency assays for HIV surveillance: 2022 technical guidance},
+  author={UNAIDS and WHO and others},
+  year={2022},
+  publisher={World Health Organization}
+}
