Improvements to Chapters 1 and 2

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -66,23 +66,23 @@ This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that the primary concern is real world questions and the means to answer them.
 The statistical approach is Bayesian because probability theory is used to arrive at conclusions based on models for observed data.
 
-(ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on severity of the condition.
+(ref:gbd) HIV is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on severity of the condition.
+
+The applied focus of this thesis is in obtaining the strategic information needed to plan the response to the HIV (human immunodeficiency virus) epidemic in sub-Saharan Africa (SSA).
+Over 40 years since the beginning of the epidemic, among non-infants HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA [@ihme2019; Figure \@ref(fig:gbd)].
+Quantification of the epidemic using statistics is an important part of the public health response.
+Effective implementation of HIV prevention and treatment requires strategic information.
+However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
-The applied focus of this thesis is in obtaining the strategic information needed to plan the response to the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
-Quantification of the epidemic using statistics is an important part of the public health response.
-Effective implementation of HIV prevention and treatment requires strategic information.
-However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
-
 The data used were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
-An important feature of these data are the location and time at which each observation was recorded.
-Spatio-temporal data occur across a range of application settings.
-While diverse in setting, they have distinctive recurring commonalities which make their collective study worthwhile.
-The work conducted in this thesis makes use of, and aspires to contribute to, techniques from spatio-temporal statistics.
+An important feature of these data are the location and time at which observations were recorded.
+Spatio-temporal data of this sort occur across a diverse range of application settings.
+Distinctive recurring commonalities make their collective study worthwhile.
+The work conducted in this thesis uses, and aspires to contribute to, techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
@@ -92,19 +92,19 @@ To facilitate reproducible research, the R package `orderly` [@orderly] was used
 
 This thesis is structured as follows:
 
-* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
+* Chapter \@ref(hiv-aids) provides an overview of the HIV/AIDS epidemic, and describes the challenges faced by disease surveillance efforts.
 * Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
 In disease mapping, areas correspond to the administrative divisions of a country, which are typically not a grid.
-I evaluated the practical consequences of this concern.
+I used a simulation and survey data studies to evaluate the practical consequences of this concern 
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of acquiring HIV infection.
 The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
 I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented.
 This work [@howes2023spatio] was included in the UNAIDS (Joint United Nations Programme on HIV/AIDS) Global AIDS Update 2022 and 2023.
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
-First, I implemented the integrated nested Laplace approximations using automatic differentiation, such that the method is compatible with Naomi, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
+First, to allow for compatibility with Naomi, I implemented the integrated nested Laplace approximations using automatic differentiation, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 Second, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis.
 I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order or as stand-alone studies.
+Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order, or as stand-alone studies, if preferred.
