--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -55,7 +55,7 @@ The first AIDS cases were reported in Los Angeles in the early 1980s [@gottlieb1
 Since then, HIV has spread globally.
 Transmission occurs by exposure to specific bodily fluids of an infected person.
 The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
-Approximately `r custom_numbers_to_words(infections)` people have become infected with HIV, and of those `r custom_numbers_to_words(deaths)` have died of AIDS-related causes.
+Approximately `r custom_numbers_to_words(infections)` people have become infected with HIV, and of those `r custom_numbers_to_words(deaths)` have died of AIDS-related causes [@unaids2023aidsinfo].
 
 ```{r}
 pepfar <- 100 * 1e9
@@ -64,10 +64,10 @@ global_fund <- round((24.2 + 5)) * 1e9
 ```
 
 <!-- A lot of effort going into it -->
-An ongoing global and multifaceted effort has been made to respond to the epidemic.
-The response has been shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
+An ongoing global effort has been made to respond to the epidemic.
+The response has been multifaceted, and shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
 on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-To give an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
+As an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -76,7 +76,7 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. (The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is colourblind friendly, and the default in @wilke2019fundamentals.)
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is colourblind friendly, and the default in @wilke2019fundamentals.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
@@ -102,12 +102,13 @@ The number of AIDS-related deaths, `r custom_numbers_to_words(art_deaths_averted
   Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
 
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
-Three landmark randomised control trials [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
+Three landmark randomised control trials (RCTs) [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
 
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
-PrEP and PEP have been shown to be effective at an individual-level, but there are few population-level studies.
+PrEP has been shown to be effective at an individual-level across a number of RCTs [@baeten2012antiretroviral; @thigpen2012antiretroviral], but there are few population-level studies.
+PEP cannot be studied with RCTs, but observational studies indicate that it is highly effective [@dominguez2016updated].
 These medical interventions are more costly than some other options, so are primarily useful in high risk settings.
 
 Though important progress had been made, facilitated by the interventions above, there remains much more to do.
