--- a/references.bib
+++ b/references.bib
@@ -2556,3 +2556,33 @@
   year={2022},
   publisher={World Health Organization}
 }
+
+@article{baeten2012antiretroviral,
+  title={Antiretroviral prophylaxis for HIV prevention in heterosexual men and women},
+  author={Baeten, Jared M and Donnell, Deborah and Ndase, Patrick and Mugo, Nelly R and Campbell, James D and Wangisi, Jonathan and Tappero, Jordan W and Bukusi, Elizabeth A and Cohen, Craig R and Katabira, Elly and others},
+  journal={New England Journal of Medicine},
+  volume={367},
+  number={5},
+  pages={399--410},
+  year={2012},
+  publisher={Mass Medical Soc}
+}
+
+@article{thigpen2012antiretroviral,
+  title={Antiretroviral preexposure prophylaxis for heterosexual HIV transmission in Botswana},
+  author={Thigpen, Michael C and Kebaabetswe, Poloko M and Paxton, Lynn A and Smith, Dawn K and Rose, Charles E and Segolodi, Tebogo M and Henderson, Faith L and Pathak, Sonal R and Soud, Fatma A and Chillag, Kata L and others},
+  journal={New England Journal of Medicine},
+  volume={367},
+  number={5},
+  pages={423--434},
+  year={2012},
+  publisher={Mass Medical Soc}
+}
+
+@article{dominguez2016updated,
+  title={Updated guidelines for antiretroviral postexposure prophylaxis after sexual, injection drug use, or other nonoccupational exposure to HIV—United States, 2016},
+  author={Dominguez, Kenneth L. and Smith, Dawn K. and Vasavi Thomas and Crepaz, Nicole and Lang, Karen and Heneine, Walid and McNicholl, Janet M. and Reid, Laurie and Freelon, Brandi and Nesheim, Steven R. and Huang, Ya-lin (Aileen) and Weidle, Paul J.},
+  year={2016},
+  month={April 18, 2016, Update (May 23, 2018)},
+  url={https://stacks.cdc.gov/view/cdc/38856}
+}
