--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -42,6 +42,13 @@ knitr::include_graphics("../figures/beyond-borders/geometries.png")
 
 #
 
+```{r crps, echo=FALSE, out.width="80%", fig.align = 'center'}
+resource_version <- "20231207-114837-b071e571"
+knitr::include_graphics(paste0("../resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ.png"))
+```
+
+#
+
 ```{r global-aids-strategy, echo=FALSE, out.width="40%", fig.align = 'center'}
 knitr::include_graphics("global-aids-strategy.png")
 ```
