Cross validation figures in!

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231207-114837-b071e571"
+resource_version <- "20231208-122812-b2454b8c"
 ```
 
 # Models for areal spatial structure {#beyond-borders}
@@ -647,6 +647,7 @@ Given pointwise log-likelihood evaluations, these measures were obtained via the
 ### Results
 
 Figures \@ref(fig:ladder-civ2017phia), \@ref(fig:ladder-mwi2016phia), \@ref(fig:ladder-tza2017phia), and \@ref(fig:ladder-zwe2016phia) show the posterior mean and 95% credible interval obtained for each area for each inferential model.
+Figures \@ref(fig:crps-mean-se-civ2017phia), \@ref(fig:crps-mean-se-mwi2016phia), \@ref(fig:crps-mean-se-tza2017phia), and \@ref(fig:crps-mean-se-zwe2016phia).
 
 ## Discussion
 
