LOO-CRPS maps in

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231208-122812-b2454b8c"
+resource_version <- "20231208-174405-bcf2e5df"
 ```
 
 # Models for areal spatial structure
@@ -230,27 +230,50 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 
 ### Cross-validation
 
-(ref:crps-mean-se-civ2017phia) Côte d’Ivoire 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)A.
+(ref:crps-mean-se-civ2017phia) Côte d’Ivoire 2017 PHIA survey (Panel \@ref(fig:hiv-surveys)A).
 
 ```{r crps-mean-se-civ2017phia, fig.cap="(ref:crps-mean-se-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-civ2017phia.png"))
 ```
 
-(ref:crps-mean-se-mwi2016phia) Malawi 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)B.
+(ref:crps-mean-se-mwi2016phia) Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
 
 ```{r crps-mean-se-mwi2016phia, fig.cap="(ref:crps-mean-se-mwi2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-mwi2016phia.png"))
 ```
 
-(ref:crps-mean-se-tza2017phia) Tanzania 2017 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)C.
+(ref:crps-mean-se-tza2017phia) Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
 
 ```{r crps-mean-se-tza2017phia, fig.cap="(ref:crps-mean-se-tza2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-tza2017phia.png"))
 ```
 
-(ref:crps-mean-se-zwe2016phia) Zimbabwe 2016 PHIA survey. Direct estimates obtained from the survey are as shown in Panel \@ref(fig:hiv-surveys)D.
+(ref:crps-mean-se-zwe2016phia) Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
 
 ```{r crps-mean-se-zwe2016phia, fig.cap="(ref:crps-mean-se-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/crps-mean-se-zwe2016phia.png"))
 ```
 
+(ref:map-civ2017phia) Côte d’Ivoire 2017 PHIA survey \@ref(fig:hiv-surveys)A.
+
+```{r map-civ2017phia, fig.cap="(ref:map-civ2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-civ2017phia.png"))
+```
+
+(ref:map-mwi2016phia) Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
+
+```{r map-mwi2016phia, fig.cap="(ref:map-mwi2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-mwi2016phia.png"))
+```
+
+(ref:map-tza2017phia) Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
+
+```{r map-tza2017phia, fig.cap="(ref:map-tza2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-tza2017phia.png"))
+```
+
+(ref:map-zwe2016phia) Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
+
+```{r map-zwe2016phia, fig.cap="(ref:map-zwe2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-zwe2016phia.png"))
+```
