Add NUTS for Loa loa diagnostic plot

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -33,7 +33,7 @@ knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
 
 #### `rstan` {#rstan-epil}
 
-(ref:stan-epil) Traceplots for the `rstan` parameters with the worst effective sample size $\text{ESS}$ (Panel A) and potential scale reduction factor $\hat R$. These were `tau_nu` (an $\text{ESS}$ of 437) and `tau_nu` (an $\hat R$ of 1.009). Rather than plotting the traceplot for `tau_nu` twice, the parameter `epsilon[18]` is included, which had the second highest $\hat R$ of 1.008.
+(ref:stan-epil) Traceplots for the `rstan` parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `tau_nu` (an $\text{ESS}$ of 437) and `tau_nu` (an $\hat R$ of 1.009). Rather than plotting the traceplot for `tau_nu` twice, the parameter `epsilon[18]` is included, which had the second highest $\hat R$ of 1.008.
 
 ```{r stan-epil, fig.cap="(ref:stan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
@@ -42,6 +42,13 @@ knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 ## Loa loa example
 
 ### NUTS convergence and suitability
+
+(ref:nuts-loa-loa) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ (Panel A) and potential scale reduction factor $\hat R$.
+
+```{r nuts-loa-loa, fig.cap="(ref:nuts-loa-loa)"}
+knitr::include_graphics("figures/naomi-aghq/nuts-loa-loa.png")
+```
+
 
 ## Simplified Naomi model description {#naomi-math}
 
