Add coverage for surveys

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231209-123525-5024f43e"
+resource_version <- "20231210-153834-0103a63e"
 ```
 
 # Models for areal spatial structure
@@ -276,4 +276,28 @@ knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/
 
 ```{r map-zwe2016phia, fig.cap="(ref:map-zwe2016phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/map-zwe2016phia.png"))
+```
+
+(ref:histogram-ecdf-diff-civ2017phia) Côte d’Ivoire 2017 PHIA survey \@ref(fig:hiv-surveys)A.
+
+```{r histogram-ecdf-diff-civ2017phia, fig.cap="(ref:histogram-ecdf-diff-civ2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-civ2017phia.png"))
+```
+
+(ref:histogram-ecdf-diff-mwi2016phia) Malawi 2016 PHIA survey \@ref(fig:hiv-surveys)B.
+
+```{r histogram-ecdf-diff-mwi2016phia, fig.cap="(ref:histogram-ecdf-diff-mwi2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-mwi2016phia.png"))
+```
+
+(ref:histogram-ecdf-diff-tza2017phia) Tanzania 2017 PHIA survey \@ref(fig:hiv-surveys)C.
+
+```{r histogram-ecdf-diff-tza2017phia, fig.cap="(ref:histogram-ecdf-diff-tza2017phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-tza2017phia.png"))
+```
+
+(ref:histogram-ecdf-diff-zwe2016phia) Zimbabwe 2016 PHIA survey \@ref(fig:hiv-surveys)D.
+
+```{r histogram-ecdf-diff-zwe2016phia, fig.cap="(ref:histogram-ecdf-diff-zwe2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/histogram-ecdf-diff-zwe2016phia.png"))
 ```
