Difference in suitability and prevalence as compared with (bad) NUTS results

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -990,10 +990,16 @@ Latent field and hyperparameter samples were used in each conditional simulation
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-adam-fixed.png")
 ```
 
-(ref:conditional-simulation-diff-fixed) Difference in suitability posterior means $\mathbb{E}[\phi_\texttt{LA}(s)] - \mathbb{E}[\phi_\texttt{G}(s)]$ (Panel A) and prevalence posterior means $\mathbb{E}[\rho_\texttt{LA}(s)] - \mathbb{E}[\rho_\texttt{G}(s)]$(Panel B) between Laplace and Gaussian marginals. As $\beta_\phi$ and $\beta_\rho$ were fixed this difference is as a result in differences in estimation of $u(s)$ and $v(s)$.
+(ref:conditional-simulation-phi-diff-fixed) Difference between the suitability posterior means with Gaussian marginals $\mathbb{E}[\phi_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\phi_\texttt{LA}(s)]$ to NUTS results. As $\beta_\phi$ was fixed this difference is as a result in differences in estimation of $u(s)$.
 
-```{r conditional-simulation-diff-fixed, fig.cap="(ref:conditional-simulation-diff-fixed)"}
-knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-fixed.png")
+```{r conditional-simulation-phi-diff-fixed, fig.cap="(ref:conditional-simulation-phi-diff-fixed)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation-phi-diff-fixed.png")
+```
+
+(ref:conditional-simulation-rho-diff-fixed) Difference between the prevalence posterior means with Gaussian marginals $\mathbb{E}[\rho_\texttt{G}(s)]$ and Laplace marginals $\mathbb{E}[\rho_\texttt{LA}(s)]$ to NUTS results. As $\beta_\rho$ was fixed this difference is as a result in differences in estimation of $v(s)$.
+
+```{r conditional-simulation-rho-diff-fixed, fig.cap="(ref:conditional-simulation-rho-diff-fixed)"}
+knitr::include_graphics("figures/naomi-aghq/conditional-simulation-rho-diff-fixed.png")
 ```
 
 (ref:loa-loa-mean-sd) Absolute and relative differences between the Gaussian and Laplace marginal posterior means and standard deviations at each $u(s_i), v(s_i): i \in [190]$.
