Figures comparing Gaussian and Laplace results to NUTS results for Loa loa problem

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1002,10 +1002,10 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-phi-diff-fixe
 knitr::include_graphics("figures/naomi-aghq/conditional-simulation-rho-diff-fixed.png")
 ```
 
-(ref:loa-loa-mean-sd) Absolute and relative differences between the Gaussian and Laplace marginal posterior means and standard deviations at each $u(s_i), v(s_i): i \in [190]$.
+(ref:loa-loa-mean-sd-abs) Absolute difference between the Gaussian and Laplace marginal posterior means and standard deviations to NUTS results at each $u(s_i), v(s_i): i \in [190]$. Relative differences are in Figure \@ref(fig:loa-loa-mean-sd-pct).
 
-```{r loa-loa-mean-sd, fig.cap="(ref:loa-loa-mean-sd)"}
-knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd.png")
+```{r loa-loa-mean-sd-abs, fig.cap="(ref:loa-loa-mean-sd-abs)"}
+knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-abs.png")
 ```
 
 ## The Naomi model {#naomi}
