--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -43,12 +43,19 @@ knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 
 ### NUTS convergence and suitability
 
-(ref:nuts-loa-loa) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ (Panel A) and potential scale reduction factor $\hat R$.
+(ref:nuts-loa-loa) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$.
 
 ```{r nuts-loa-loa, fig.cap="(ref:nuts-loa-loa)"}
 knitr::include_graphics("figures/naomi-aghq/nuts-loa-loa.png")
 ```
 
+### Inference comparison
+
+(ref:loa-loa-mean-sd-pct) Relative difference between the Gaussian and Laplace marginal posterior means and standard deviations to NUTS results at each $u(s_i), v(s_i): i \in [190]$. Absolute differences are in Figure \@ref(fig:loa-loa-mean-sd-abs).
+
+```{r loa-loa-mean-sd-pct, fig.cap="(ref:loa-loa-mean-sd-pct)"}
+knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-pct.png")
+```
 
 ## Simplified Naomi model description {#naomi-math}
 
