--- a/index.Rmd
+++ b/index.Rmd
@@ -72,7 +72,7 @@ section-numbering-depth: 3 # to which depth should headings be numbered?
 toc-depth: 1 # to which depth should headings be included in table of contents?
 lof: true # include list of figures in front matter?
 lot: true # include list of tables in front matter?
-mini-toc: true  # include mini-table of contents at start of each chapter? (this just prepares it; you must also add \minitoc after the chapter titles)
+mini-toc: false  # include mini-table of contents at start of each chapter? (this just prepares it; you must also add \minitoc after the chapter titles)
 mini-lot: false  # include mini-list of tables by start of each chapter?
 mini-lof: false  # include mini-list of figures by start of each chapter?
 
@@ -89,7 +89,7 @@ abstractseparate: false  # include front page w/ abstract for examination school
 hidelinks: true # false to highlight clickable links with a colored border
 
 ### citation and bibliography style ###
-bibliography-heading-in-pdf: Works Cited
+bibliography-heading-in-pdf: Works cited
 
 # biblatex options #
 # unless you run into 'biber' error messages, use natbib as it lets you customise your bibliography directly
